--- a/Contact-form/index.html
+++ b/Contact-form/index.html
@@ -27,7 +27,7 @@
             <form action="https://getform.io/f/e7a07809-1103-4e66-b781-07a3042580d6" method="post">
                 <input type="text" name="name" required placeholder="Name">
                 <input type="text" name="email" required placeholder="Email">
-                <input type="text" name="phone" required placeholder="Phone">
+                <input type="text" name="phone" required placeholder="Phone" maxlength="10">
                 <input type="text" name="subject" required placeholder="subject">
                 <textarea name="message" required placeholder="Message"> </textarea>
                 <input type="hidden" name="_captcha" value="True">
